gccida/c3/finish_enum
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_enum/src/c-decl.c:6471:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_enum/src/c-decl.c:6472:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *i; // r15 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_enum/src/c-decl.c:6473:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_enum/src/c-decl.c:6476:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_enum/src/c-decl.c:6480:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_enum/src/c-decl.c:6488:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_enum/src/c-decl.c:6511:18: error: expected expression
i = ( tree_node *)*( &global_trees + 11); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_enum/src/c-decl.c:6511:7: error: use of undeclared identifier 'tree_node'
i = ( tree_node *)*( &global_trees + 11); 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_enum/src/c-decl.c:6512:25: error: expected expression
elements = ( tree_node *)*( &global_trees + 11); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_enum/src/c-decl.c:6512:14: error: use of undeclared identifier 'tree_node'
elements = ( tree_node *)*( &global_trees + 11); 
             ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/finish_enum/src/obj/c-decl.o] Error 1
